--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
@@ -11,8 +12,8 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -25,21 +26,60 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-//    dataBinding {
-//        enabled = true
-//    }
+
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
+
+    dexOptions {
+        preDexLibraries = false
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+
 }
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.core:core-ktx:1.8.0'
+
+    implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "com.github.lzyzsd:jsbridge:1.0.4"
+
+    implementation 'com.android.support:multidex:1.0.3'
+    //androidx UI
+
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    //util
     implementation 'com.blankj:utilcodex:1.31.0'
+
+    //dialog
+    implementation "com.afollestad.material-dialogs:lifecycle:3.3.0"
+    implementation "com.afollestad.material-dialogs:core:3.3.0"
+    implementation "com.afollestad.material-dialogs:color:3.3.0"
+    implementation "com.afollestad.material-dialogs:datetime:3.3.0"
+    implementation "com.afollestad.material-dialogs:bottomsheets:3.3.0"
+
+    //BaseAdapter
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
+
+
+    //Bugly
+    implementation 'com.tencent.bugly:crashreport_upgrade:1.4.5'
+    implementation 'com.tencent.bugly:nativecrashreport:3.7.1'
+//    //屏幕适配
+//    implementation 'com.github.JessYanCoding:AndroidAutoSize:v1.2.1'
+
+
+    //防崩溃
+    implementation 'cat.ereza:customactivityoncrash:2.3.0'
+
+    implementation 'com.github.hegaojian:JetpackMvvm:1.2.7'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
