--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,17 +53,16 @@ dependencies {
 
     //dialog
     implementation "com.afollestad.material-dialogs:lifecycle:3.3.0"
-    implementation "com.afollestad.material-dialogs:core:3.3.0"
-    implementation "com.afollestad.material-dialogs:color:3.3.0"
-    implementation "com.afollestad.material-dialogs:datetime:3.3.0"
-    implementation "com.afollestad.material-dialogs:bottomsheets:3.3.0"
+//    implementation "com.afollestad.material-dialogs:core:3.3.0"
+//    implementation "com.afollestad.material-dialogs:color:3.3.0"
+//    implementation "com.afollestad.material-dialogs:datetime:3.3.0"
+//    implementation "com.afollestad.material-dialogs:bottomsheets:3.3.0"
 
 
     //Bugly
     implementation 'com.tencent.bugly:crashreport_upgrade:1.4.5'
     implementation 'com.tencent.bugly:nativecrashreport:3.7.1'
-//    //屏幕适配
-//    implementation 'com.github.JessYanCoding:AndroidAutoSize:v1.2.1'
+
 
     //防崩溃
     implementation 'cat.ereza:customactivityoncrash:2.3.0'
